# word-counter

./: LICENSE  README.rst  requirements.txt  setup.cfg  setup.py
word_counter/: __init__.py  __main__.py  commands.py
