[flake8]
max-line-length = 92
ignore = E203, W503, F401

[metadata]
author = sig9
author_email = sig9@sig9.org
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: Japanese
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = Count the number of words on the specified URL(s).
keywords =
    Count
    Morphological analysis
    Split
    Word
license = MIT License
license_file = LICENSE
long_description = file: README.rst
maintainer = sig9
maintainer_email = sig9@sig9.org
name = word-counter
platforms = 
    POSIX
    Windows
    Unix
    MacOS
url = https://github.com/sig9org/word-counter
version = 0.0.2

[options]
install_requires =
    click
    morfessor
    polyglot
    pycld2
    pyicu
packages = find:

[options.entry_points]
console_scripts =
    word-counter = word_counter.__main__:main

[options.packages.find]
exclude =
    tests